basic test setup working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class='container'>
+      <% flash.each do |msg_type, message| %>
+        <div id='flash' class='flash-<% msg_type %>'><%= message %></div>
+      <% end %>
+
+      <%= yield %>
+    </div>
+
   </body>
 </html>
