--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,10 +2,10 @@
 
 <h1>Show all Users</h1>
 
-<h4>Current User: <%= current_user.email %> -- <%= current_user.role %></h4>
-
 <ul>
 <% users.sort_by(&:id).each do |user| %>
-  <li>User <%= user.id %>: <%= user.email %> -- <%= user.role %></li>
+  <li><%= link_to("User #{user.id}", user_path(user)) %>: <%= user.email %> -- role: <%= user.role %></li>
 <% end %>
 </ul>
+
+<i>Current User: <%= current_user.email %> -- <%= current_user.role %></i>
