--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,10 @@
 
 <h1>Show <%= user.email %></h1>
 
-<h4>Current User: <%= current_user.email %> -- <%= current_user.role %></h4>
+  <% if policy(user).edit? %>
+    <p><%= link_to("Edit User #{user.id}", edit_user_path(user)) %>: <%= user.email %> -- role: <%= user.role %></p>
+  <% else %>
+    <p>User <%= user.id %>: <%= user.email %> -- role: <%= user.role %></p>
+  <% end %>
+
+<i>Current User: <%= current_user.email %> -- <%= current_user.role %></i>
